--- a/content/post/2024-09-09-Week-One/index.Rmd
+++ b/content/post/2024-09-09-Week-One/index.Rmd
@@ -147,7 +147,7 @@ From these two graphs, I can see that, in the two most recent election cycles, s
 As a first pass at constructing a model to predict the 2024 election, I will weight the vote share of the 2016 and 2020 elections in each state to produce an estimate for this year's national presidential election using the following formula:
 
 $$ Y_{2024_i} = \frac{3}{4} * Y_{2020_i} + \frac{1}{4}*Y_{2016_i}$$
-The following map, with a custom theme and state labels, is produced.
+The following map with the projected win margin for each state is produced. Below it is the forecasted electoral college total. This was produced by merging a year-by-year breakdown of each state's total electoral votes  with the two-party popular vote data frame for each state and year.
 
 ```{r include = FALSE}
 
@@ -163,10 +163,10 @@ pv2p_2024_states <- d_pvstate_wide |>
 
 ```
 
-```{r echo = FALSE}
+```{r include = FALSE}
 
 # Plot the margin of victory in a U.S. state map.
-pv2p_2024_states |>
+map_2024 <- pv2p_2024_states |>
     left_join(states_map, by = "region") |>
     ggplot(aes(long, lat, group = group)) +
     geom_polygon(aes(fill = pv2p_2024_margin), color = "black") +
@@ -177,11 +177,7 @@ pv2p_2024_states |>
                          low = "dodgerblue4", 
                          breaks = c(-50,-25,0,25,50), 
                          limits=c(-50,50)) + 
-  theme_void()
-
-
-```
-```{r include = FALSE}
+  theme_void() + theme(aspect.ratio=.6)
 
 # Generate projected state winners and merge with electoral college votes to make 
 # summary of electoral college vote distributions. 
@@ -209,7 +205,7 @@ df_2024 <- pv2p_2024_states |>
 total_votes <- 538
 
 # Create a stacked bar chart
-ggplot(df_2024, aes(x = "", y = electoral_votes, fill = winner)) +
+ec_2024 <-ggplot(df_2024, aes(x = "", y = electoral_votes, fill = winner)) +
   geom_bar(stat = "identity", width = .8) +
   geom_text(aes(label = electoral_votes), position = position_stack(vjust = 0.5), color = "white", size = 5) +
   scale_fill_manual(values = c("dodgerblue4", "firebrick1")) +
@@ -219,8 +215,13 @@ ggplot(df_2024, aes(x = "", y = electoral_votes, fill = winner)) +
   labs(fill = "Party", title = "2024 Presidential Forecast: Week One") +
   scale_y_continuous(limits = c(0, 538)) +
   geom_hline(yintercept = 270, color = "white", linetype = "dashed")
+
+grid.arrange(map_2024, ec_2024, ncol = 1)
 ```
-Now, let's compare this estimate to the actual electoral college totals from 2020 and 204.
+
+As we can see, my first model, a simplified electoral cycle model that relies exclusively on the two-party popular vote shares from the 2016 and 2020 election, predict a Harris win with 276 electoral votes compared to Trump's 262.
+
+I would like to **further explore the electoral college** by investigating who actually won the elections in our data set and the potential bias the electoral college could give either party. I will do this by comparing the nationwide electoral college results with the nationwide two-party popular vote totals for both the 2016 and 2020 elections. This data was published by the Associated Press and shared by \textit{The New York Times}.
 
 ```{r include = FALSE}
 
@@ -305,12 +306,20 @@ pv_2020 <- ggplot(df_2020_pv, aes(x = "", y = popular_vote, fill = winner)) +
 grid.arrange(ec_2016, ec_2020, pv_2016, pv_2020, ncol = 2)
 
 ```
+\textit{These electoral college totals do not consider unfaithful electors.}
+
+In displaying the popular vote and electoral college results side-by-side, it is clear that, in both 2016 and 2020, the Republican party lost the two-party national popular vote. It, however, in 2016, still managed to solidly win the electoral college. This could reflect a bias in the electoral college in favor of Republicans, perhaps because, despite there being more Democrats, they tend to cluster in urban cities and populous states like California and New York. For example, a 65-35 win for a Democratic candidate in California does not do more for the Democratic candidate than a 51-49 win would have, despite the potential millions in additional votes for the Democratic candidate that the former outcome would have provided.
+
+J. Miles Coleman and Kyle Kondik in their [Center for Politics](https://centerforpolitics.org/crystalball/a-brief-history-of-electoral-college-bias/) article, ["A Brief History of Electoral College Bias,"](https://centerforpolitics.org/crystalball/a-brief-history-of-electoral-college-bias/) explains how, though the electoral college has favored Republicans in recent years, it could very well exhibit a slight Democratic bias if states continue to shift demgraphically and electorally. For example, if "Arizona and Georgia" continue to shift leftward while "Michigan and Nevada simply maintain the way they voted in 2020," the Electoral College will soon exhibit a Democratic lean. This suggests that the electoral college is not systemically biased toward either party, necessarily, but vacillates in how well it matches the national popular vote largely based on whether people of certain political leanings tend to cluster or not.
 
 # Citations:
 
-2016 Presidential Election Results NYT
+“2016 Presidential Election Results.” \textit{The New York Times}, The New York Times, www.nytimes.com/elections/2016/results/president. Accessed 9 Sept. 2024. 
 
+Coleman , J Miles, and Kyle Kondik. “A Brief History of Electoral College Bias.” \textit{Sabato’s Crystal Ball}, 6 July 2023, centerforpolitics.org/crystalball/a-brief-history-of-electoral-college-bias/. 
+
+“Presidential Election Results: Biden Wins.” \textit{The New York Times}, The New York Times, 3 Nov. 2020, www.nytimes.com/interactive/2020/11/03/us/elections/results-president.html. 
 
 # Data Sources: 
 
-Data are from US presidential election popular vote results 1948-2020.
+Data are from the US presidential election popular vote results from 1948-2020. National popular vote percentage totals are also drawn from \textit{The New York Times} for 2016 and 2020.
